# seqa-py

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
seqa_py/: __init__.py  cli.py  server.py
src/: lib.rs
tests/: test_cloud.py  test_local.py  test_server.py
