[package]
name = "seqa_py"
version = "0.3.3"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_seqa_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
seqa_core = "3.1.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
