[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "seqa-py"
version = "0.1.0"
description = "Python library for querying genomic files across cloud and local storage"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
]

[project.scripts]
seqa_py = "seqa_py.cli:main"
seqa_py_server = "seqa_py.server:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "seqa_py._seqa_py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "maturin>=1.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
]
