[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "seqa-py"
license = "Apache-2.0"
dynamic = ["version"]
description = "Python library for querying genomic files across cloud and local storage"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "seqa_py._seqa_py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "maturin>=1.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
]
